# mapd

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md  test_alloc  test_wrap
.github/workflows/: ci.yml
docs/: INSTALL.md  TESTING.md  commands.md  demo_video.md  mapd-architecture.md
scripts/: valgrind-analyzer.sh  valgrind-test.sh
src/: analyzer.c  backend.c  backend.h  fragmentation.c  fragmentation.h  memwrap.c  memwrap.h  memwrapper.c  message.h
src/analyzer/: analyzer.c  analyzer.h  fragmentation.c  fragmentation.h
src/gui/: gui.c  main.c  mapdgui.cmb  mapdgui.ui
src/gui/controller/: appselec.c  appselec.h  gui_controller.c  gui_controller.h  launcher.c  launcher.h  main_controller.c  main_controller.h
src/gui/data/ui/: mapd.cmb  mapd.ui  styles.css
src/gui/model/: app_model.c  app_model.h
src/gui/resources/: mapdgui.cmb  mapdgui.ui  resources.gresource.xml
src/gui/view/: gui.c  gui.h  main_view.c  main_view.h
src/memwrap/: memwrap.c
src/message/: message.c  message.h
tests/: test_alloc.c  test_valgrind.c  test_wrap.c
